Feat: Create User service (delete user)
