# server/routes/users.js
@@ -55,4 +55,21 @@ app.get('/patients', requireRange, async (req, res) => {
   }
 });
 
+app.delete('/deleteTherapist', async (req, res) => {
+  try {
+    const data = await userService.deleteTherapist(req.query, req.headers.authorization.split(" ")[1]);
+    return res.status(200).send({
+      isValid: data.isValid,
+      message: data.message,
+      data: data.data,
+    });
+  } catch (error) {
+    return res.status(500).send({
+      isValid: false,
+      message: 'something failed, try again later',
+      data: null,
+    });
+  }
+});
+
 module.exports = app;
